--- a/config/database.yml
+++ b/config/database.yml
@@ -5,27 +5,28 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 1 } %>
   timeout: 5000
+  prepared_statements: false
+
+
+# development:
+#   <<: *default
+#   database: storage/development.sqlite3
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: postgres
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: postgres
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  host: <%= ENV.fetch("DB_HOST") %>
-  port: <%= ENV.fetch("DB_PORT") %>
-  database: <%= ENV.fetch("DB_NAME") %>  
-  username: <%= ENV.fetch("DB_USERNAME") %>
-  password: <%= ENV.fetch("DB_PASSWORD") %>
+  <<: *default
+  database: postgres
