fix: add prod database config

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -2,3 +2,8 @@ development:
   clients:
     default:
       uri: <%= ENV.fetch("MONGO_CONNECTION_STRING") %>
+
+production:
+  clients:
+    default:
+      uri: <%= ENV.fetch("MONGO_CONNECTION_STRING") %>
